<resources>
    <string name="app_name">BeloteSkor</string>
    <string name="players">Players</string>
    <string name="scores">Scores</string>
    <string name="statistics">Statistics</string>
    <string name="search">Search</string>
    <string name="preferences">Preferences</string>
    <string name="logout">Logout</string>
    <string name="on_your_left">On Your Left</string>
    <string name="on_your_right">On Your Right</string>
    <string name="your_partner">Your Partner</string>
    <string name="you">You</string>
    <string name="white_triangle">white triangle</string>
    <string name="new_game">New Game</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_0">0</string>
    <string name="annonces">Annonces</string>
    <string name="variantes">Variantes</string>
    <string name="sans_annonce">Sans Annonce</string>
    <string name="nb_points_1001">nb points : 1001</string>
    <string name="nb_donnes_12">nb donnes : 12</string>
    <string name="sens_inverse">Sens Inverse</string>
    <string name="raymond">Raymond</string>
    <string name="gis_le">Gisèle</string>
    <string name="distribution">Distribution</string>
    <string name="sens_aiguilles">Sens Aiguilles</string>
    <string name="albert">Albert</string>
    <string name="g_raldine">Géraldine</string>
    <string name="start_game">Start Game</string>
    <string name="sans_annonces">Sans Annonces</string>
    <string name="dialog_text_mode_equipe">Missing names. The game continue with 2 Teams : Us and You. Would you like to continue ?</string>
    <string name="_1">1</string>
    <string name="arrowup">arrowup</string>
    <string name="_52">52</string>
    <string name="_110">110</string>
    <string name="validation">Validation</string>
    <string name="delimiter">delimiter</string>
    <string name="robert">Robert</string>
    <string name="add_circle">add circle</string>
    <string name="belote">Belote</string>
    <string name="trefle">trefle</string>
    <string name="pique">pique</string>
    <string name="carreau">carreau</string>
    <string name="coeur">coeur</string>
    <string name="capot">Capot</string>
    <string name="right">Right</string>
    <string name="left">Left</string>
    <string name="cent">Cent</string>
    <string name="tierce">Tierce</string>
    <string name="carre">Carré</string>
    <string name="_100">100</string>
    <string name="_50">50</string>
    <string name="valet">Valet</string>
    <string name="_9">9</string>
    <string name="autre">Autre</string>
    <string name="us">Us</string>
    <string name="nombre_de_parties_jou_es">Nombre de parties jouées :</string>
    <string name="nombre_de_parties_gagn_es">Nombre de parties gagnées :</string>
    <string name="partenaire_privil_gi">Partenaire privilégié :</string>
    <string name="partie_num">Partie N°</string>
    <string name="joueurs">Joueurs</string>
    <string name="parties">Parties</string>


</resources>
