<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:iconTint="#FFFFFF"
        android:title="@string/search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/infos_donne"
        android:title="Infos donne actuelle"
        app:showAsAction="never"/>

    <item
        android:id="@+id/preferences"
        android:title="@string/preferences"
        app:showAsAction="never" />
    <item
        android:id="@+id/logout"
        android:title="@string/logout"
        app:showAsAction="never" />

    <item
        android:id="@+id/reset_db"
        android:title="reset DB"
        app:showAsAction="never" />

    <item
        android:id="@+id/relaunch"
        android:title="relaunch"
        app:showAsAction="never"/>

</menu>