<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView_donne_details"
        android:layout_width="0dp"
        android:layout_height="155dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/colorPrimaryLight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView_donne">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:id="@+id/fl_bckg_right"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/fl_bckg_left"
                app:layout_constraintTop_toTopOf="parent">

            </FrameLayout>

            <FrameLayout
                android:id="@+id/fl_bckg_left"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/delimiter"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/delimiter">

            </FrameLayout>

            <ImageView
                android:id="@+id/delimiter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/delimiter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/delimiters" />

            <com.shawnlin.numberpicker.NumberPicker
                android:id="@+id/numberPicker"
                android:layout_width="66dp"
                android:layout_height="77dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="64dp"
                android:background="@drawable/radius_button"
                android:backgroundTint="@color/color_accent2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:np_dividerDistance="48dp"
                app:np_dividerThickness="1dp"
                app:np_max="162"
                app:np_min="0"
                app:np_orientation="vertical"
                app:np_selectedTextColor="@color/colorPrimaryDark"
                app:np_selectedTextSize="30sp"
                app:np_textSize="18sp">

            </com.shawnlin.numberpicker.NumberPicker>

            <TextView
                android:id="@+id/details_donne_player1_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/radius_button"
                android:backgroundTint="@color/color_accent2"
                android:fontFamily="@font/roboto"
                android:text="@string/robert"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toStartOf="@+id/details_donne_player2_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/details_donne_player2_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/roboto"
                android:text="@string/g_raldine"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toStartOf="@+id/delimiter"
                app:layout_constraintStart_toEndOf="@+id/details_donne_player1_name"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/details_donne_player3_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/roboto"
                android:text="@string/gis_le"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toStartOf="@+id/details_donne_player4_name"
                app:layout_constraintStart_toEndOf="@+id/details_donne_player2_name"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/details_donne_player4_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/roboto"
                android:text="@string/raymond"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/details_donne_player3_name"
                app:layout_constraintTop_toTopOf="parent" />


        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <ImageView
        android:id="@+id/arrow_down"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:contentDescription="@string/arrowup"
        android:elevation="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_drop_down_black_24dp" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardView_donne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/score_donne_equipeA"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/roboto"
                android:text="@string/_52"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold|italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/score_donne_equipeB"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/roboto"
                android:text="@string/_110"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_numero_donne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/roboto"
                android:text="@string/_1"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/score_donne_equipeB"
                app:layout_constraintStart_toEndOf="@+id/score_donne_equipeA"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/validation_score_btn"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:background="@drawable/radius_button"
                android:backgroundTint="@color/color_accent2"
                android:fontFamily="@font/roboto"
                android:text="@string/validation"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>