<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView_donne_details"
        android:layout_width="0dp"
        android:layout_height="172dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/colorPrimaryLight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/delimiter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/delimiter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/delimiters" />

            <TextView
                android:id="@+id/details_donne_player1_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/roboto"
                android:text="@string/robert"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toStartOf="@+id/details_donne_player2_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/details_donne_player2_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/roboto"
                android:text="@string/g_raldine"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toStartOf="@+id/delimiter"
                app:layout_constraintStart_toEndOf="@+id/details_donne_player1_name"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/details_donne_player3_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/roboto"
                android:text="@string/gis_le"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toStartOf="@+id/details_donne_player4_name"
                app:layout_constraintStart_toEndOf="@+id/details_donne_player2_name"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/details_donne_player4_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/roboto"
                android:text="@string/raymond"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/details_donne_player3_name"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_essai"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="72dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.503"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>