<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="123dp"
        android:background="@color/colorPrimaryLight"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/score_total_equipeB"
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/roboto"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="40sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/et_on_your_left" />

        <EditText
            android:id="@+id/et_you"
            android:layout_width="145dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:ems="10"
            android:enabled="true"
            android:fontFamily="@font/roboto"
            android:hint="@string/you"
            android:inputType="textPersonName"
            android:maxLength="9"
            android:paddingBottom="0dp"
            android:singleLine="true"
            android:textAlignment="center"
            android:textColor="#424242"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/et_on_your_right"
            android:layout_width="145dp"
            android:layout_height="0dp"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:ems="10"
            android:enabled="true"
            android:fontFamily="@font/roboto"
            android:hint="@string/on_your_right"
            android:inputType="textPersonName"
            android:maxLength="9"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:textAlignment="center"
            android:textColor="#424242"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/score_total_equipeB" />


        <EditText
            android:id="@+id/et_on_your_left"
            android:layout_width="145dp"
            android:layout_height="0dp"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:ems="10"
            android:enabled="true"
            android:fontFamily="@font/roboto"
            android:hint="@string/on_your_left"
            android:inputType="textPersonName"
            android:maxLength="9"
            android:paddingBottom="0dp"
            android:textAlignment="center"
            android:textColor="#424242"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/et_your_partner"
            android:layout_width="145dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:ems="10"
            android:enabled="true"
            android:fontFamily="@font/roboto"
            android:hint="@string/your_partner"
            android:inputType="textPersonName"
            android:maxLength="9"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:textAlignment="center"
            android:textColor="#424242"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/score_total_equipeA" />

        <TextView
            android:id="@+id/score_total_equipeA"
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/roboto"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="40sp"
            android:textStyle="bold|italic"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/et_you" />


        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.0" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="0dp" />

        <ImageView
            android:id="@+id/triangleView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/white_triangle"
            android:src="@drawable/ic_details_white_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/et_on_your_right"
            app:layout_constraintStart_toEndOf="@+id/et_your_partner" />

        <Button
            android:id="@+id/btn_distrib"
            android:layout_width="47dp"
            android:layout_height="25dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/color_accent2"
            android:text="Distrib."
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/score_total_equipeB"
            app:layout_constraintStart_toEndOf="@+id/score_total_equipeA"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>