<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <android.support.v7.widget.CardView
        android:id="@+id/cv_players"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_player_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto"
                android:text="Dorothée"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:fontFamily="@font/roboto"
                android:text="@string/nombre_de_parties_jou_es"
                android:textStyle="italic"
                app:layout_constraintBaseline_toBaselineOf="@+id/tv_player_name"
                app:layout_constraintStart_toEndOf="@+id/tv_player_name" />

            <TextView
                android:id="@+id/tv_nb_parties_jouees"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/roboto"
                android:text="25"
                android:textStyle="bold|italic"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
                app:layout_constraintStart_toEndOf="@+id/textView3" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto"
                android:text="@string/nombre_de_parties_gagn_es"
                android:textStyle="italic"
                app:layout_constraintStart_toEndOf="@+id/tv_player_name"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TextView
                android:id="@+id/tv_nb_parties_gagnees"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/roboto"
                android:text="17"
                android:textStyle="bold|italic"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
                app:layout_constraintStart_toEndOf="@+id/textView5" />

            <TextView
                android:id="@+id/tv_pourcentage_parties_gagnees"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/roboto"
                android:text="(60%)"
                android:textStyle="italic"
                app:layout_constraintBaseline_toBaselineOf="@+id/tv_nb_parties_gagnees"
                app:layout_constraintStart_toEndOf="@+id/tv_nb_parties_gagnees" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/roboto"
                android:text="@string/partenaire_privil_gi"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_player_name"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/tv_partenaire_privilegie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/roboto"
                android:text="Albert"
                android:textStyle="bold|italic"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView8"
                app:layout_constraintStart_toEndOf="@+id/textView8" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>